CSS UPDATE, ADD SIDEBAR

--- a/pages/css.html
+++ b/pages/css.html
@@ -8,6 +8,10 @@
     <title>CSS</title>
     <link rel="stylesheet" href="../styles/style.css">
     <style>
+      main {
+        max-width: 1300px;
+      }
+      
       a {
         outline: none;
         /* text-decoration: none; */
