--- a/pages/html/ch1-1-2.html
+++ b/pages/html/ch1-1-2.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="../../styles/prism.css">
     <script src="../../scripts/prism.js" defer></script>
     <script src="../../scripts/script.js" defer></script>
+    <style>
+      
+    </style>
   </head>
 
   <body>
@@ -26,23 +29,34 @@
       </ul>
     </header>
 
+    <div class="sidebar">
+      <h2>В этой статье</h2>
+      <ul>
+        <li class="dline"><a href="#section1">HTML: Структура веб-страницы</a></li>
+        <li class="dline"><a href="#section2">CSS: Стиль и визуальное оформление</a></li>
+        <li class="dline"><a href="#section3">JavaScript: Интерактивность и динамика</a></li>
+        <li class="dline"><a href="#section4">Советы по эффективному использованию связки HTML, CSS и JavaScript</a></li>
+        <!-- Добавьте другие главы -->
+      </ul>
+    </div>
+
     <!--основной блок с информацией-->
     <main>
       <article>
         <h1>Роль HTML в связке с CSS и JavaScript.</h1><hr>
         <p>HTML, CSS и JavaScript — это три кита, на которых строится фронтенд веб-разработки. Каждый из них играет свою уникальную роль, и их совместное использование позволяет создавать полноценные, интерактивные и эстетически привлекательные веб-страницы. Давай разберём, как они взаимодействуют и какие аспекты необходимо учитывать для полноценного понимания их связки.</p>
-        <ol>
-          <li><strong>HTML: Структура веб-страницы</strong></li>
-          <p>HTML (HyperText Markup Language) отвечает за структуру и содержание веб-страницы. Это язык разметки, который определяет, какие элементы будут находиться на странице и в каком порядке.</p>
-          <p><strong>Основные функции HTML:</strong></p>
-          <ul>
-            <li>Создание каркаса страницы.</li>
-            <li>Определение иерархии контента: заголовки, параграфы, списки и таблицы.</li>
-            <li>Разметка мультимедийных элементов (изображения, видео, аудио).</li>
-            <li>Добавление гиперссылок для навигации между страницами.</li>
-            <li>Внедрение форм для сбора данных (например, регистрационные формы).</li>
-          </ul>
-          <p><strong>Пример базового HTML-документа:</strong></p>
+
+        <h3 id="section1">1. HTML: Структура веб-страницы</h3>
+        <p>HTML (HyperText Markup Language) отвечает за структуру и содержание веб-страницы. Это язык разметки, который определяет, какие элементы будут находиться на странице и в каком порядке.</p>
+        <p><strong>Основные функции HTML:</strong></p>
+        <ul>
+          <li>Создание каркаса страницы.</li>
+          <li>Определение иерархии контента: заголовки, параграфы, списки и таблицы.</li>
+          <li>Разметка мультимедийных элементов (изображения, видео, аудио).</li>
+          <li>Добавление гиперссылок для навигации между страницами.</li>
+          <li>Внедрение форм для сбора данных (например, регистрационные формы).</li>
+        </ul>
+        <p><strong>Пример базового HTML-документа:</strong></p>
 <pre>
   <code class="lang-html">
     &lt;!DOCTYPE html>
@@ -60,7 +74,8 @@
   </code>
 </pre>
           <p>HTML описывает структуру страницы, но по умолчанию она будет выглядеть просто и минималистично — здесь на сцену выходит CSS.</p>
-          <li><strong>CSS: Стиль и визуальное оформление</strong></li>
+
+          <h3 id="section2">2. CSS: Стиль и визуальное оформление</h3>
           <p>CSS (Cascading Style Sheets) отвечает за внешний вид и оформление веб-страницы. Он используется для задания стилей HTML-элементов — таких как цвета, шрифты, отступы, границы и расположение элементов на странице. CSS отделяет содержимое от его представления, что делает код более гибким и легко управляемым.</p>
           <p><strong>Основные функции CSS:</strong></p>
           <ul>
@@ -107,7 +122,8 @@
             <li><strong>Наследование (Inheritance)</strong>: многие CSS-свойства передаются от родительских элементов к дочерним (например, шрифт и цвет текста).</li>
             <li><strong>Специфичность (Specificity)</strong>: определяет, какое из конфликтующих CSS-правил будет применено.</li>
           </ul>
-          <li><strong>JavaScript: Интерактивность и динамика</strong></li>
+
+          <h3 id="section3">3. JavaScript: Интерактивность и динамика</h3>
           <p>JavaScript (JS) — это язык программирования, который используется для создания интерактивных и динамических элементов на веб-страницах. С помощью JavaScript можно управлять содержимым HTML и стилями CSS, изменяя их в реальном времени в зависимости от действий пользователя.</p>
           <p><strong>Основные функции JavaScript:</strong></p>
           <ul>
@@ -194,7 +210,7 @@
     });
   </code>
 </pre>
-          <li><strong>Советы по эффективному использованию связки HTML, CSS и JavaScript</strong></li>
+          <h3 id="section4">Советы по эффективному использованию связки HTML, CSS и JavaScript</h3>
           <ol>
             <li><strong>Семантическая разметка</strong>. Использование семантических тегов HTML (&lt;article>, &lt;section>, &lt;nav>, &lt;footer>) помогает улучшить SEO и доступность страницы.</li>
             <li><strong>Разделение кода</strong>. Старайся хранить HTML, CSS и JavaScript в отдельных файлах. Это улучшает поддержку кода, облегчает кэширование и ускоряет загрузку страницы.</li>
