--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>LIBRARY</title>
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/script.js" defer></script>
+    <style>
+      main {
+        max-width: 1300px;
+      } 
+    </style>
   </head>
 
   <body>
