--- a/pages/PostgreSQL.html
+++ b/pages/PostgreSQL.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="../styles/style.css">
     <script src="../scripts/script.js" defer></script>
     <style>
+      main {
+        max-width: 1300px;
+      }
+      
       a {
         outline: none;
         /* text-decoration: none; */
