--- a/pages/html/ch4-1-1.html
+++ b/pages/html/ch4-1-1.html
@@ -26,12 +26,26 @@
       </ul>
     </header>
 
+    <div class="sidebar">
+      <h2>В этой статье</h2>
+      <ul>
+        <li class="dline"><a href="#section1">1. Тег &lt;header></a></li>
+        <li class="dline"><a href="#section2">2. Тег &lt;footer></a></li>
+        <li class="dline"><a href="#section3">3. Тег &lt;nav></a></li>
+        <li class="dline"><a href="#section4">4. Тег &lt;main></a></li>
+        <li class="dline"><a href="#section5">5. Тег &lt;article></a></li>
+        <li class="dline"><a href="#section6">6. Тег &lt;section></a></li>
+        <li class="dline"><a href="#section7">7. Тег &lt;aside></a></li>
+        <!-- Добавьте другие главы -->
+      </ul>
+    </div>
+
     <!--основной блок с информацией-->
     <main>
       <article>
         <h1>Основные структурные элементы: &lt;header>, &lt;footer>, &lt;nav>, &lt;main>, &lt;article>, &lt;section>, &lt;aside>.</h1><hr>
         <p>Основные структурные элементы HTML — это семантические теги, которые помогают обозначить различные разделы веб-страницы, улучшая её структуру, доступность и SEO. Вот полный обзор ключевых структурных элементов, которые широко используются для создания логичной и понятной разметки веб-страниц:</p>
-        <h3><strong>1. Тег &lt;header></strong></h3>
+        <h3 id="section1"><strong>1. Тег &lt;header></strong></h3>
         <p>Тег <code>&lt;header></code> используется для определения заголовочной части веб-страницы или её раздела. Обычно он включает такие элементы, как:</p>
         <ul>
           <li>Логотип,</li>
@@ -59,7 +73,7 @@
           <li>Тег <code>&lt;header</code>> можно использовать не только в начале страницы, но и для каждого отдельного раздела (например, в статье), где требуется заголовок.</li>
           <li><code>&lt;header></code> не должен содержать других структурных тегов, таких как <code>&lt;footer></code>, но может включать <code>&lt;h1>–&lt;h6></code>, <code>&lt;nav></code>, и другие элементы.</li>
         </ul>
-        <h3><strong>2. Тег &lt;footer></strong></h3>
+        <h3 id="section2"><strong>2. Тег &lt;footer></strong></h3>
         <p>Тег <code>&lt;footer></code> предназначен для размещения информации о "подвале" страницы или её раздела. Обычно там находятся:</p>
         <ul>
           <li>Авторские права,</li>
@@ -86,7 +100,7 @@
           <li>Как и <code>&lt;header></code>, этот тег может быть использован в контексте отдельных разделов страницы, а не только в конце всего документа.</li>
           <li><code>&lt;footer></code> обычно содержит информацию о владельце сайта, ссылки на важные страницы, и другие вспомогательные элементы.</li>
         </ul>
-        <h3><strong>3. Тег &lt;nav></strong></h3>
+        <h3 id="section3"><strong>3. Тег &lt;nav></strong></h3>
         <p>Тег <code>&lt;nav></code> используется для определения навигационных ссылок на веб-странице. Это может быть главное меню, ссылки на разделы или любую другую навигацию по сайту.</p>
         <p>Пример:</p>
 <pre>
@@ -105,7 +119,7 @@
           <li>&lt;nav> используется только для основных навигационных элементов. Не следует помещать все ссылки страницы в этот тег.</li>
           <li>Он может находиться в разных частях страницы — как в заголовке, так и в футере, или в других местах в зависимости от структуры.</li>
         </ul>
-        <h3><strong>4. Тег &lt;main></strong></h3>
+        <h3 id="section4"><strong>4. Тег &lt;main></strong></h3>
         <p>Тег <code>&lt;main></code> обозначает основное содержимое страницы, которое является уникальным для данного документа. Всё, что относится к основному контенту страницы (статьи, продукты, текст), помещается внутрь этого тега.</p>
         <p>Пример:</p>
 <pre>
@@ -123,7 +137,7 @@
           <li>На странице может быть только один тег <code>&lt;main></code>.</li>
           <li>Он не должен включать такие элементы, как боковые панели, футеры или навигационные элементы, если они не связаны с основным контентом.</li>
         </ul>
-        <h3><strong>5. Тег &lt;article></strong></h3>
+        <h3 id="section5"><strong>5. Тег &lt;article></strong></h3>
         <p>Тег <code>&lt;article></code> используется для обозначения независимого, самодостаточного фрагмента контента, который может существовать вне контекста страницы. Примеры — это статьи, посты в блогах, новостные заметки, комментарии.</p>
         <p>Пример:</p>
 <pre>
@@ -139,7 +153,7 @@
           <li>Можно использовать несколько <code>&lt;article></code> тегов на одной странице.</li>
           <li>Каждый <code>&lt;article></code> может включать внутри себя собственные заголовки, параграфы и другие структурные элементы.</li>
         </ul>
-        <h3><strong>6. Тег &lt;section></strong></h3>
+        <h3 id="section6"><strong>6. Тег &lt;section></strong></h3>
         <p>Тег <code>&lt;section></code> представляет собой раздел документа, который объединён общей темой или смыслом. Это может быть часть статьи, страницы или другого элемента.</p>
         <p>Пример:</p>
 <pre>
@@ -155,7 +169,7 @@
           <li>Тег <code>&lt;section></code> может содержать собственные заголовки (<code>&lt;h1>–&lt;h6></code>), а также другие теги, такие как параграфы, списки и даже другие <code>&lt;section></code> или <code>&lt;article></code>.</li>
           <li>Этот тег используют для логической группировки информации. Однако если контент внутри <code>&lt;section></code> может быть независимым и использоваться отдельно, лучше применить тег <code>&lt;article></code>.</li>
         </ul>
-        <h3><strong>7. Тег &lt;aside></strong></h3>
+        <h3 id="section7"><strong>7. Тег &lt;aside></strong></h3>
         <p>Тег <code>&lt;aside></code> представляет собой содержимое, которое относится к основной части страницы, но при этом является вспомогательным. Обычно используется для боковых панелей, дополнительных ссылок, рекламы, цитат или других не основных элементов.</p>
         <p>Пример:</p>
 <pre>
@@ -174,7 +188,7 @@
           <li>Содержимое <code>&lt;aside></code> обычно не является ключевым для всей страницы, но поддерживает или дополняет основное содержимое.</li>
           <li>Он может быть размещён как внутри тега <code>&lt;main></code>, так и за его пределами, если контент является второстепенным по отношению к основному.</li>
         </ul>
-        <h3><strong>Семантика и её важность</strong></h3>
+        <h3 id="section1"><strong>Семантика и её важность</strong></h3>
         <p>Семантические теги, такие как <code>&lt;header></code>, <code>&lt;footer></code>, <code>&lt;nav></code>, <code>&lt;main></code>, <code>&lt;article></code>, <code>&lt;section></code>, и <code>&lt;aside></code>, помогают поисковым системам и вспомогательным технологиям (таким как экранные читалки) лучше понимать структуру страницы. Они делают код более понятным для разработчиков и обеспечивают лучшую доступность.</p>
         <p><strong>Преимущества использования семантических тегов:</strong></p>
         <ul>
