--- a/pages/html.html
+++ b/pages/html.html
@@ -245,15 +245,7 @@
         </ol>
 
         <h3>Статьи HTML</h3>
-
-        <p>
-          <ul>
-            <li><a href="../pages/html/html_tags.html">Теги HTML</a></li>
-          </ul>
-        </p>
-           
-        </p>
-
+        <a href="../pages/html/html_tags.html">Теги HTML</a> <br>
       </article>
     </main>
 
